--- a/MiniHubApi.Infrastructure/MiniHubApi.Infrastructure.csproj
+++ b/MiniHubApi.Infrastructure/MiniHubApi.Infrastructure.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MiniHubApi.Domain\MiniHubApi.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
