refactor(db): update entity configurations and fluent validations

--- a/MiniHubApi/appsettings.json
+++ b/MiniHubApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "ExternalApi": {
+    "BaseUrl": "https://69657a38f6de16bde44a70f6.mockapi.io/",
+    "ProductsEndpoint": "Category/{0}/Product",
+    "CategoriesEndpoint": "Category",
+    "TimeoutSeconds": 30
+  }
 }
