--- a/MiniHubApi.Application/MiniHubApi.Application.csproj
+++ b/MiniHubApi.Application/MiniHubApi.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.30.0" />
     <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
       <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.11\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
     </Reference>
