feat: implement ASP.NET Core Identity with JWT authentication
Authentication Features:
- ApplicationUser entity extending IdentityUser with custom properties
- JWT token generation and validation with 24h expiration
- Role-based authorization (Admin, Editor, Viewer)
- AuthService with register, login, and user management
- AuthController with endpoints: /register, /login, /me, /change-password
- Automatic admin user seeding on startup
- Password policies and user validation

--- a/MiniHubApi/appsettings.json
+++ b/MiniHubApi/appsettings.json
@@ -13,5 +13,16 @@
     "ProductsEndpoint": "Category/{0}/Product",
     "CategoriesEndpoint": "Category",
     "TimeoutSeconds": 30
+  },
+
+  "ConnectionStrings": {
+    "MongoDbConnection": "mongodb://localhost:27017",
+    "MySqlConnection": "Server=localhost;Port=3307;Database=MiniHubApi;Uid=myuser;Pwd=mypassword;"
+  },
+  "MongoDBSettings": {
+    "DatabaseName": "MiniHubAuditoria",
+    "AuditCollection": "AuditLogs",
+    "ImportLogsCollection": "ImportLogs",
+    "ErrorLogsCollection": "ErrorLogs"
   }
 }
