--- a/MiniHubApi.Domain/MiniHubApi.Domain.csproj
+++ b/MiniHubApi.Domain/MiniHubApi.Domain.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="MongoDB.Bson" Version="2.30.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.11\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
